kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__guardian_approved_request_permissions_clears_status_without_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





• Working (0s • esc to interrupt)


› Ask Kodex to do anything

  GPT-5.6-Sol default · /tmp/project
